# facet-compiler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FACET-v2.1.3-Production-Language-Specification.md  LICENSE-APACHE  MIGRATION.md  README.md  rokoss21readme.md
.claude/: settings.local.json
.github/workflows/: ci.yml  link-check-config.json  release.yml
crates/fct-ast/: Cargo.toml
crates/fct-ast/src/: lens_signatures.rs  lib.rs  types.rs
crates/fct-engine/: Cargo.toml
crates/fct-engine/src/: box_model.rs  errors.rs  lib.rs  mock_system.rs  r_dag.rs  test_reporter.rs  test_runner.rs  tokenizer.rs  tool_executor.rs  tool_schemas.rs
crates/fct-parser/: Cargo.toml
crates/fct-parser/src/: error.rs  lib.rs  parser.rs  test_parser.rs  test_patch.rs
crates/fct-parser/tests/: lexical_matrix_tests.rs  parser_tests.rs  syntax_matrix_tests.rs
crates/fct-render/: Cargo.toml
crates/fct-render/src/: lib.rs
crates/fct-resolver/: Cargo.toml
crates/fct-resolver/src/: lib.rs
crates/fct-std/: Cargo.toml
crates/fct-std/src/: lens_adapter.rs  lib.rs
crates/fct-std/src/lenses/: level1.rs  list.rs  map.rs  mod.rs  string.rs  utility.rs
crates/fct-validator/: Cargo.toml
crates/fct-validator/src/: checker.rs  constraints.rs  errors.rs  lib.rs  types.rs
crates/fct-wasm/: .gitignore  Cargo.toml  README.md  build.sh  package.json
crates/fct-wasm/example/: index.html
crates/fct-wasm/src/: lib.rs
crates/fct-wasm/tests/: web.rs
docs/: 01-quickstart.md  02-tutorial.md  03-architecture.md  04-type-system.md  05-examples-guide.md  06-cli.html  06-cli.md  07-api-reference.md  08-lenses.html  08-lenses.md  09-testing.md  10-performance.md  11-security.md  12-errors.md  13-import-system.md  14-v2.1.3-migration-checklist.md  15-execution-model.md  16-production-scenario.md  17-benchmark-report.md  18-integration-guide.md  19-engineer-qa.md  FACET-v2.1.3-Migration-Checklist-FINAL.md  README.md  _config.yml  facet2-specification.md  faq.md  index.html  index.md  manifesto.md  test.html  test.md
docs/_includes/: footer.html
docs/_layouts/: default.html
docs/assets/: main.css  main.scss
docs/assets/css/: style.css
docs/examples/: advanced_features.facet  production_support_flow.facet  rag_pipeline.input.json
examples/: README.md  basic_prompt.facet  basic_prompt.input.json  policy_guard_test.facet  rag_pipeline.facet
examples/spec/: 01_minimal.facet  02_vars_types_pipelines.facet  03_input_runtime.facet  03_input_runtime.input.json  04_when_gating.facet  04_when_gating.input.json  05_imports_merge.facet  06_interfaces_policy.facet  07_policy_conditions.facet  07_policy_conditions.input.json  08_test_suite.facet  09_multimodal_content.facet  10_layout_budget.facet  11_pure_mode_expected_f803.facet  12_exec_mode_expected_f454.facet
examples/spec/imports/: 05_base.facet  05_override.facet
scripts/: build-release.sh  generate_compliance_report.py  smoke_examples_spec.sh  spec_matrix_examples.sh
src/: main.rs
src/commands/: artifact.rs  build.rs  canonical.rs  codegen.rs  guard.rs  inspect.rs  mod.rs  mode_profile.rs  policy.rs  run.rs  test.rs
tests/: conformance_layout_tests.rs  error_catalog_matrix_tests.rs  error_tests.rs  facet_semantics_tests.rs  fts_conformance_matrix_tests.rs  import_validation_tests.rs  integration_test.rs  interface_tools_tests.rs  policy_validation_tests.rs  profile_tests.rs  replay_determinism_tests.rs  test_runner_tests.rs
tests/conformance/policy/: README.md
