[package]
name = "fct-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
fct-ast = { path = "../fct-ast" }
fct-std = { path = "../fct-std" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10"
regex = "1.10"
once_cell = "1.19"
unicode-normalization = "0.1"
getrandom = { version = "0.2", optional = true }

[features]
wasm = ["getrandom/js"]
