[package]
name = "fct-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { workspace = true }
nom_locate = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
fct-ast = { workspace = true }
unicode-normalization = "0.1"
sha2 = "0.10"

[features]
default = ["nom_locate"]
wasm = ["nom_locate"]
