[package]
name = "fct-render"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
thiserror = { workspace = true }
fct-ast = { workspace = true }
fct-engine = { workspace = true }
fct-std = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
sha2 = "0.10"

[features]
wasm = []
