[package]
name = "fct-std"
version = "0.1.0"
edition = "2021"

[dependencies]
fct-ast = { path = "../fct-ast" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
urlencoding = "2.1"
md5 = "0.7"
sha2 = "0.10"

[features]
wasm = []

