[package]
name = "fct-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
fct-ast = { path = "../fct-ast" }
fct-std = { path = "../fct-std" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = { version = "1.10", default-features = false, features = ["std"] }

[features]
wasm = []
